--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -7,10 +7,10 @@
     <a routerLink="contact">contact</a>
   </div>
   <div class="container__logos">
-    <a href="https://www.facebook.com/handsoftheheron/" target="_blank">
+    <a href="https://www.facebook.com/cuculirecords" target="_blank">
       <img src="../../assets/icons/facebookwht.svg" class="container__logos__logo">
     </a>
-    <a href="https://www.instagram.com/handsoftheheron/?hl=en" target="_blank">
+    <a href="https://www.instagram.com/cuculirecords/" target="_blank">
       <img src="../../assets/icons/instagramwht.svg" class="container__logos__logo">
     </a>
   </div>
