--- a/src/app/pages/home/components/carousel/carousel.component.scss
+++ b/src/app/pages/home/components/carousel/carousel.component.scss
@@ -15,12 +15,16 @@
         text-decoration: none;
         color: $offWhite;
         position: absolute;
-        bottom: 0;
+        bottom: 10%;
         width: 100%;
         background: $textBgFaded;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
         h2 {
-          font-size: 6em;
-          margin-bottom: 0;
+          font-size: 5em;
+          margin-top: 0.3em;
+          margin-bottom: 0.2em;
         }
         h3 {
           font-size: 2em;
