--- a/src/app/pages/home/components/news/tile/tile.component.scss
+++ b/src/app/pages/home/components/news/tile/tile.component.scss
@@ -9,6 +9,12 @@
 .container__tile {
   text-decoration: none;
   color: inherit;
+  &:hover{
+      color: #8ce0e5;
+  }
+  &__featured {
+    color: black !important;
+  }
   &__img-wrapper {
     width: 100%;
     img {
@@ -23,15 +29,14 @@
   }
   &__text {
     &__head {
-
+      margin: 0.2em 0;
     }
     &__desc {
       width: 90%;
       font-size: 1.2em;
       overflow: hidden;
-      display: -webkit-box;
-      -webkit-line-clamp: 2;
-      -webkit-box-orient: vertical;
+      max-height: 6em;
+      display: none;
     }
     &__read-more {
       font-style: italic;
