- Minor updates and resizing before launch

--- a/src/app/pages/home/components/about-us/about-us.component.scss
+++ b/src/app/pages/home/components/about-us/about-us.component.scss
@@ -23,6 +23,9 @@
 }
 
 @media only screen and (max-width: 500px) {
+  .container__heading {
+    font-size: 2.2em;
+  }
   .img-container img {
     width: 80vw;
   }
