--- a/src/app/pages/releases/releases.component.html
+++ b/src/app/pages/releases/releases.component.html
@@ -5,7 +5,7 @@
   <div class="container__releases" data-aos="fade-down">
     <app-release-tile *ngFor="let release of releases" [release]="release"></app-release-tile>
     <div class="container__sorry" *ngIf="!releases.length">
-      <h2 class="allPage-subtitle">No releases yet... watch this space</h2>
+      <h2 class="allPage-subtitle">Watch this space</h2>
     </div>
   </div>
 </div>
