--- a/src/app/pages/home/components/about-us/about-us.component.html
+++ b/src/app/pages/home/components/about-us/about-us.component.html
@@ -7,8 +7,8 @@
     After several years of writing, performing and recording with songwriters’ collective Hands of the Heron, it felt right to create a platform to share the effort and joy of releasing our music, alongside the solo projects and offshoot collaborations born from the band.
 </p>
   <p class="container__desc">
-    Within this creative cocoon, these songwriters and poets have found pathways to develop their craft.
- </p>
+    This space has been a creative cocoon for us to develop our craft.
+  </p>
   <p class="container__desc">Come and listen.</p>
   <div class="img-container">
     <img src="assets/icons/logoalt.png">
