--- a/src/app/pages/news/news-page/news-page/news-page.component.scss
+++ b/src/app/pages/news/news-page/news-page/news-page.component.scss
@@ -1,11 +1,19 @@
+@import "src/styles";
+
 .img-wrapper {
   width: 100vw;
   img {
     width: 100%;
-    max-height: 60vh;
-    //object-fit: cover;
-    object-fit: contain;
+    max-height: 30em;
+    object-fit: cover;
+    object-position: top;
+    //object-fit: contain;
   }
+}
+
+a {
+  text-decoration: none !important;
+  color: $tertiaryFontColor;
 }
 
 .quote-mb {
