--- a/src/app/pages/news/news/news-tile/news-tile.component.scss
+++ b/src/app/pages/news/news/news-tile/news-tile.component.scss
@@ -20,8 +20,9 @@
     img {
       width: 100%;
       max-height: 15em;
-      //object-fit: cover;
-      object-fit: contain;
+      object-fit: cover;
+      object-position: top;
+      //object-fit: contain;
     }
     .featuredImg {
       max-height: 20em;
