--- a/src/app/pages/releases/release-page/release-page.component.html
+++ b/src/app/pages/releases/release-page/release-page.component.html
@@ -1,20 +1,77 @@
-<div class="container content-padded" data-aos="fade-in" data-aos-delay="150">
+<!--<div class="container content-padded" data-aos="fade-in" data-aos-delay="150">-->
+<!--  <div class="container__upper">-->
+<!--    <div class="container__img-wrapper">-->
+<!--      <img src="{{release.imgSrc}}">-->
+<!--    </div>-->
+<!--    <div class="container__release-info">-->
+<!--      <h2 class="page-title allPage-title">{{release.title}}</h2>-->
+<!--      <h2>{{release.artist}}, {{release.year}}</h2>-->
+<!--      <p class="allPage-para" [innerHTML]="release.info"></p>-->
+<!--      <div class="container__release-info__purchase" >-->
+<!--        <h3>Buy now: {{release.price}}</h3>-->
+<!--      </div>-->
+<!--      <div class="container__release-info__links">-->
+<!--        <a *ngFor="let link of release.links" href="{{link.href}}">-->
+<!--          <img src="{{link.icon}}">-->
+<!--        </a>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
+
+<div class="container content-padded" data-aos="fade-in" data-aos-delay="250">
+  <div class="container__dk-title">
+    <h2 class="allPage-title dk-title" style="margin-bottom: 0.5em">{{release.title}}</h2>
+    <h1 class="dk-title" style="margin-bottom: 1em">{{release.artist}}</h1>
+  </div>
   <div class="container__upper">
     <div class="container__img-wrapper">
       <img src="{{release.imgSrc}}">
     </div>
-    <div class="container__release-info">
-      <h2 class="page-title allPage-title">{{release.title}}</h2>
-      <h2>{{release.artist}}, {{release.year}}</h2>
-      <p class="allPage-para">{{release.info}}</p>
-      <div class="container__release-info__purchase" >
-        <h3>Buy now: {{release.price}}</h3>
-      </div>
-      <div class="container__release-info__links">
-        <a *ngFor="let link of release.links" href="{{link.href}}" target="_blank">
-          <img src="{{link.icon}}">
+    <div class="container__artist-info">
+      <h2 class="page-title allPage-title artist-title-responsive" style="margin-bottom: 0.5em">{{release.title}}</h2>
+      <h1 class="dk-title artist-title-responsive" style="margin-bottom: 1em">{{release.artist}}</h1>
+      <p class="allPage-para artist-desc" [innerHTML]="release.info"></p>
+      <div class="container__artist-info__links">
+        <a  class="link-icon-wrapper" *ngFor="let link of release.links" href="{{link.href}}" target="_blank">
+          <fa-icon class="link-icon" [icon]="link.faObj"></fa-icon>
         </a>
       </div>
     </div>
   </div>
+<!--  <div class="container__lower" *ngIf="releases.length">-->
+<!--    <div class="container__lower__releases-wrapper">-->
+<!--      <h2 class="page-title">-->
+<!--        Releases-->
+<!--      </h2>-->
+<!--      <div class="container__lower__releases">-->
+<!--        <a *ngFor="let release of releases" href="/release/{{release.route}}">-->
+<!--          <img src="{{release.imgSrc}}">-->
+<!--          <p class="release-title">{{release.title}}</p>-->
+<!--          <p class="release-year">{{release.year}}</p>-->
+<!--        </a>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--    <div class="container__lower__events-wrapper">-->
+<!--      <h2 class="page-title">-->
+<!--        Upcoming Events-->
+<!--      </h2>-->
+<!--      <div class="container__lower__events">-->
+<!--        <div class="container__lower__events__event" *ngFor="let event of events">-->
+<!--          <div class="container__lower__events__event-wrapper">-->
+<!--            <div class="container__lower__events__event-info">-->
+<!--              <h3>{{event.date}}</h3>-->
+<!--              <h2>{{event.title}}</h2>-->
+<!--            </div>-->
+<!--            <div class="container__lower__events__event-links">-->
+<!--              <a *ngFor="let link of event.links" href="{{link.href}}">-->
+<!--                <img src="{{link.icon}}">-->
+<!--              </a>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
 </div>
+
