--- a/src/app/pages/releases/release-page/release-page.component.scss
+++ b/src/app/pages/releases/release-page/release-page.component.scss
@@ -1,28 +1,165 @@
+//@import "src/styles";
+//
+//.container {
+//  &__upper {
+//    display: flex;
+//    padding-top: 3em;
+//    padding-bottom: 0;
+//    margin-bottom: 4em;
+//  }
+//  .page-title {
+//    margin-top: 0;
+//    margin-bottom: 0;
+//  }
+//  &__img-wrapper {
+//    flex: 0 0 30%;
+//    img {
+//      max-height: 40em;
+//      max-width: 50em;
+//      width: auto;
+//      object-fit: cover;
+//    }
+//  }
+//  &__release-info {
+//    padding-left: 3em;
+//    flex: 0 0 70%;
+//    p {
+//      font-size: 1.5em;
+//    }
+//    &__links {
+//      display: flex;
+//      flex-wrap: wrap;
+//      justify-content: space-around;
+//      padding-top: 2em;
+//      a {
+//        width: 10%;
+//        img {
+//          width: 100%;
+//          border-radius: 50%;
+//          &:hover {
+//            background: $tertiaryFontColor;
+//          }
+//        }
+//        svg {
+//          &:hover {
+//            fill: $tertiaryFontColor;
+//          }
+//        }
+//      }
+//    }
+//    &__purchase {
+//      display: none;
+//    }
+//  }
+//  &__lower {
+//    margin-bottom: 4em;
+//    .page-title {
+//      margin-top: 1em;
+//    }
+//    &__releases {
+//      display: flex;
+//      flex-wrap: wrap;
+//      a {
+//        flex: 0 0 20%;
+//        margin-right: 2em;
+//        text-decoration: none;
+//        color: black;
+//        font-size: 1.4em;
+//        text-align: center;
+//        position: relative;
+//        &:hover {
+//          font-style: italic;
+//          top: -2px;
+//        }
+//        img {
+//          width: 100%;
+//        }
+//        p {
+//          margin: 0.2em;
+//        }
+//      }
+//    }
+//  }
+//}
+//
+//@media only screen and (max-width: 1000px){
+//  .content-padded {
+//    padding: 0;
+//  }
+//  .container {
+//    &__upper {
+//      display: flex;
+//      flex-direction: column;
+//      padding-top: 0;
+//    }
+//    .page-title {
+//      margin-top: 1em;
+//    }
+//    &__img-wrapper {
+//      flex: 0 0 100%;
+//      width: 100%;
+//      display: flex;
+//      img {
+//        max-height: 60em;
+//        max-width: 100%;
+//        width: 100%;
+//      }
+//    }
+//    &__release-info {
+//      padding: 0 2vw;
+//    }
+//  }
+//}
+
 @import "src/styles";
+
+.link-icon-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.link-icon {
+  color: black;
+}
+.link-icon:hover {
+  color: #6e607d;
+}
+
+.artist-title-responsive {
+  display: none;
+}
+
+.dk-title {
+  margin: 0.5em 0;
+}
+
+.artist-desc {
+  margin-top: 0 !important;
+}
+
 
 .container {
   &__upper {
     display: flex;
-    padding-top: 3em;
+    padding-top: 0;
     padding-bottom: 0;
-    margin-bottom: 4em;
+    margin-bottom: 2em;
   }
   .page-title {
     margin-top: 0;
-    margin-bottom: 0;
   }
   &__img-wrapper {
-    flex: 0 0 30%;
+    flex: 0 0 60%;
+    display: flex;
+    align-items: flex-start;
     img {
-      max-height: 40em;
-      max-width: 50em;
-      width: auto;
-      object-fit: cover;
+      width: 100%;
+      height: auto;
+      object-fit: contain;
     }
   }
-  &__release-info {
-    padding-left: 3em;
-    flex: 0 0 70%;
+  &__artist-info {
+    padding: 0 3em;
     p {
       font-size: 1.5em;
     }
@@ -47,21 +184,28 @@
         }
       }
     }
-    &__purchase {
-      display: none;
+  }
+  &__for-fans-of {
+    &__tag {
+      font-weight: 700;
     }
   }
   &__lower {
     margin-bottom: 4em;
+    display: flex;
+    padding: 0 3em;
     .page-title {
       margin-top: 1em;
+    }
+    &__releases-wrapper {
+      flex: 0 0 60%;
     }
     &__releases {
       display: flex;
       flex-wrap: wrap;
       a {
-        flex: 0 0 20%;
-        margin-right: 2em;
+        flex: 0 0 30%;
+        margin-right: 1%;
         text-decoration: none;
         color: black;
         font-size: 1.4em;
@@ -79,10 +223,43 @@
         }
       }
     }
+    &__events-wrapper {
+      flex: 0 0 40%;
+    }
+    &__events {
+      &__event {
+        border-top: 2px solid black;
+      }
+      &__event-wrapper {
+        display: flex;
+      }
+      &__event-info{
+        flex: 0 0 40%;
+      }
+      &__event-links {
+        flex: 0 0 60%;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        flex-wrap: wrap;
+        a {
+          flex: 0 0 10%;
+          img {
+            height: 2em;
+          }
+        }
+      }
+    }
   }
 }
 
-@media only screen and (max-width: 1000px){
+@media only screen and (max-width: 1200px){
+  .dk-title {
+    display: none;
+  }
+  .artist-title-responsive {
+    display: block;
+  }
   .content-padded {
     padding: 0;
   }
@@ -92,6 +269,9 @@
       flex-direction: column;
       padding-top: 0;
     }
+    &__lower {
+      flex-direction: column;
+    }
     .page-title {
       margin-top: 1em;
     }
@@ -100,13 +280,36 @@
       width: 100%;
       display: flex;
       img {
-        max-height: 60em;
+        max-height: 50em;
         max-width: 100%;
         width: 100%;
+        object-fit: cover;
       }
     }
-    &__release-info {
+    &__artist-info {
       padding: 0 2vw;
     }
   }
 }
+
+.link-icon {
+  font-size: 4em;
+}
+
+@media only screen and (max-width: 750px){
+  .link-icon {
+    font-size: 3em;
+  }
+  .container {
+    &__lower {
+      &__events {
+        &__event-wrapper {
+          display: flex;
+          flex-direction: column;
+        }
+      }
+    }
+  }
+}
+
+
