--- a/src/app/pages/releases/release-page/release-page.component.scss
+++ b/src/app/pages/releases/release-page/release-page.component.scss
@@ -125,6 +125,13 @@
   color: #6e607d;
 }
 
+.artist-link {
+  color: black;
+}
+.artist-link:hover {
+  color: #6e607d;
+}
+
 .artist-title-responsive {
   display: none;
 }
@@ -253,7 +260,7 @@
   }
 }
 
-@media only screen and (max-width: 1200px){
+@media only screen and (max-width: 2000px){
   .dk-title {
     display: none;
   }
