--- a/src/app/pages/releases/release-tile/release-tile.component.html
+++ b/src/app/pages/releases/release-tile/release-tile.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class="container__name-wrapper">
       <h3>{{release.title}}</h3>
-      <h4>{{release.artist}}</h4>
+      <h4>{{artist.name}}</h4>
     </div>
   </a>
 </div>
